// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup renders button group with default selected element 1`] = `
Object {
  "container": .c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 {
  width: 100%;
  padding-top: 0;
  padding-bottom: 16px;
}

.c2 {
  font-size: 20px;
  font-weight: 600;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,1);
}

.c4 {
  font-size: 12px;
  font-weight: 600;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,0.65);
}

.c5 {
  line-height: 1.25;
  text-transform: uppercase;
}

.c8 {
  font-family: inherit;
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  border-radius: 2px;
  cursor: pointer;
  color: #1f262d;
  background-color: rgba(255,255,255,1);
  border: 1px solid #ebebeb;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c8:hover {
  background-color: rgba(255,255,255,1);
}

.c8:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: rgba(255,255,255,1);
}

.c8:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #1f262d;
  background-color: rgba(255,255,255,1);
  border: 1px solid #999999;
  opacity: 0.2;
}

.c8.noFocus:focus {
  box-shadow: none;
}

.c8.iconed svg {
  position: relative;
  display: inline-block;
  vertical-align: text-top;
  margin-right: 8px;
}

.c7 {
  width: 50%;
}

.c7:nth-child(2n + 1) {
  padding-right: 4px;
}

.c7:nth-child(2n) {
  padding-left: 4px;
}

.c9 {
  font-size: 16px;
  font-weight: normal;
  margin-bottom: 8px;
}

.c9:hover {
  border: solid 1px #026cdf;
}

.c9:focus {
  box-shadow: none;
}

.c9.button__selected {
  background-color: rgba(2,108,223,0.1);
  border: solid 1px #026cdf;
}

.c0 {
  padding: 24px 16px 0 16px;
}

.c3 {
  line-height: 1.25;
}

@media screen and (min-width:480px) {
  .c1 {
    padding-top: 0;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    padding-top: 0;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c1 {
    padding-top: 0;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:1440px) {
  .c1 {
    padding-top: 0;
    padding-bottom: 16px;
  }
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2 text text--dark text--primary c3"
        >
          Sort by
        </div>
      </div>
      <div
        class="c1"
      >
        <div
          class="c1"
        >
          <div
            class="c4 text text--dark text--secondary c5"
          >
            Category
          </div>
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <button
              class="c8 c9 button__selected  noFocus"
              data-testid="test-button0"
            >
              All
            </button>
          </div>
          <div
            class="c7"
          >
            <button
              class="c8 c9  noFocus"
              data-testid="test-button1"
            >
              Concerts
            </button>
          </div>
          <div
            class="c7"
          >
            <button
              class="c8 c9  noFocus"
              data-testid="test-button2"
            >
              Button Label
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ButtonGroup renders default button group 1`] = `
Object {
  "container": .c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 {
  width: 100%;
  padding-top: 0;
  padding-bottom: 16px;
}

.c2 {
  font-size: 20px;
  font-weight: 600;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,1);
}

.c4 {
  font-size: 12px;
  font-weight: 600;
  line-height: 1.5;
  text-transform: none;
  color: rgba(38,38,38,0.65);
}

.c5 {
  line-height: 1.25;
  text-transform: uppercase;
}

.c8 {
  font-family: inherit;
  font-weight: 600;
  font-size: 14px;
  line-height: 2.43;
  width: 100%;
  padding: 0 12px 0 12px;
  min-width: 60px;
  text-align: center;
  border-radius: 2px;
  cursor: pointer;
  color: #1f262d;
  background-color: rgba(255,255,255,1);
  border: 1px solid #ebebeb;
  -webkit-transition: -webkit-transform 0.1s linear;
  -webkit-transition: transform 0.1s linear;
  transition: transform 0.1s linear;
  -webkit-transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
  transition: background-color 0.3s cubic-bezier(0.455,0.03,0.515,0.955);
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 5px 0 #026cdf;
}

.c8:hover {
  background-color: rgba(255,255,255,1);
}

.c8:active {
  -webkit-transform: scale(0.98,0.98) translate(0,1px);
  -ms-transform: scale(0.98,0.98) translate(0,1px);
  transform: scale(0.98,0.98) translate(0,1px);
  background-color: rgba(255,255,255,1);
}

.c8:disabled {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  color: #1f262d;
  background-color: rgba(255,255,255,1);
  border: 1px solid #999999;
  opacity: 0.2;
}

.c8.noFocus:focus {
  box-shadow: none;
}

.c8.iconed svg {
  position: relative;
  display: inline-block;
  vertical-align: text-top;
  margin-right: 8px;
}

.c7 {
  width: 50%;
}

.c7:nth-child(2n + 1) {
  padding-right: 4px;
}

.c7:nth-child(2n) {
  padding-left: 4px;
}

.c9 {
  font-size: 16px;
  font-weight: normal;
  margin-bottom: 8px;
}

.c9:hover {
  border: solid 1px #026cdf;
}

.c9:focus {
  box-shadow: none;
}

.c9.button__selected {
  background-color: rgba(2,108,223,0.1);
  border: solid 1px #026cdf;
}

.c0 {
  padding: 24px 16px 0 16px;
}

.c3 {
  line-height: 1.25;
}

@media screen and (min-width:480px) {
  .c1 {
    padding-top: 0;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:768px) {
  .c1 {
    padding-top: 0;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c1 {
    padding-top: 0;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:1440px) {
  .c1 {
    padding-top: 0;
    padding-bottom: 16px;
  }
}

<div>
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2 text text--dark text--primary c3"
        >
          Sort by
        </div>
      </div>
      <div
        class="c1"
      >
        <div
          class="c1"
        >
          <div
            class="c4 text text--dark text--secondary c5"
          >
            Category
          </div>
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <button
              class="c8 c9  noFocus"
              data-testid="test-button0"
            >
              All
            </button>
          </div>
          <div
            class="c7"
          >
            <button
              class="c8 c9  noFocus"
              data-testid="test-button1"
            >
              Concerts
            </button>
          </div>
          <div
            class="c7"
          >
            <button
              class="c8 c9  noFocus"
              data-testid="test-button2"
            >
              Button Label
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "getAllByAltText": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getAllByValue": [Function],
  "getByAltText": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "getByValue": [Function],
  "queryAllByAltText": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryAllByValue": [Function],
  "queryByAltText": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "queryByValue": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
